buildscript {
	ext {
		springBootVersion = '1.5.2.RELEASE'
	}
	repositories {
		maven {
			url "http://pik01.ii.pw.edu.pl:8081/repository/PM-proxyRepo/"
		}
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'maven'

processResources.dependsOn(':web-ui:npmInstall', ':web-ui:npm_run_prodBuild')

jar {
	baseName = 'pharmacies-manager'
	version = '0.0.1-SNAPSHOT'
}

sourceCompatibility = 1.8

repositories {
	maven {
		url "http://pik01.ii.pw.edu.pl:8081/repository/PM-proxyRepo/"
	}
	mavenCentral()
}


dependencies {
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
	compile('org.flywaydb:flyway-core')
	compile('org.springframework.boot:spring-boot-starter-security')
	compile('org.springframework.boot:spring-boot-starter-web')
	runtime('org.springframework.boot:spring-boot-devtools')
	runtime('com.h2database:h2')
	runtime('org.postgresql:postgresql')
	testCompile('org.springframework.boot:spring-boot-starter-test')
}

uploadArchives {
	repositories {
		mavenDeployer {
			repository(url: "http://pik01.ii.pw.edu.pl:8081/repository/PM-Artifactory/") {
				authentication(userName: "admin", password: "admin123")
			}
			pom.version = "0.0.1-SNAPSHOT"
			pom.artifactId = "pharmacies-manager"
			pom.groupId = "com.pik01.pharmaciesmanager"
		}
	}
}